# Singularity

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/Core/: Application.cpp  Application.h  Camera.h  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Transform.h  Window.cpp  Window.h
Engine/src/Jobs/: JobSystem.cpp  JobSystem.h
Engine/src/Math/: MathBenchmark.cpp  MathBenchmark.h  ScalarMath.h  SimdMath.h
Engine/src/Memory/: AllocatorBenchmark.cpp  AllocatorBenchmark.h  ArenaAllocator.h  FreeListAllocator.cpp  FreeListAllocator.h  MemoryCommon.h  PoolAllocator.h  StackAllocator.h
Engine/src/Physics/: Broadphase.cpp  Broadphase.h  Contact.h  ContactSolver.cpp  ContactSolver.h  Joint.cpp  Joint.h  Narrowphase.cpp  Narrowphase.h  PhysicsComponents.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.h
Engine/src/Renderer/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLibrary.cpp  ShaderLibrary.h
Engine/src/Renderer/DX12/: CascadedShadowMap.cpp  CascadedShadowMap.h  CommandContext.cpp  CommandContext.h  ConstantBuffer.cpp  ConstantBuffer.h  DX12Common.h  DepthBuffer.cpp  DepthBuffer.h  DynamicUploadBuffer.cpp  DynamicUploadBuffer.h  GBuffer.cpp  GBuffer.h  GpuHeap.cpp  GpuHeap.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndexBuffer.cpp  IndexBuffer.h  RenderTexture.cpp  RenderTexture.h  RootSignature.cpp  RootSignature.h  ShadowMap.cpp  ShadowMap.h  SwapChain.cpp  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Renderer/DXC/: DxcInstance.cpp  DxcInstance.h  ShaderBlob.h
Engine/src/Scene/: Components.h  DemoScene.h  Entity.h  RenderSystem.cpp  RenderSystem.h  SceneManager.cpp  SceneManager.h  SparseSet.h  World.h
Engine/src/UI/: ImGuiLayer.cpp  ImGuiLayer.h
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/Scenes/: AllocatorScene.cpp  AllocatorScene.h  BloomScene.cpp  BloomScene.h  CsmScene.cpp  CsmScene.h  CubeGridScene.cpp  CubeGridScene.h  DeferredScene.cpp  DeferredScene.h  GpuHeapScene.cpp  GpuHeapScene.h  JobScene.cpp  JobScene.h  JointScene.cpp  JointScene.h  PhysicsScene.cpp  PhysicsScene.h  ShadowScene.cpp  ShadowScene.h  SimdMathScene.cpp  SimdMathScene.h  SingleCubeScene.cpp  SingleCubeScene.h  SsaoScene.cpp  SsaoScene.h  TessellationScene.cpp  TessellationScene.h
Sandbox/Shaders/: BloomBlur.hlsl  BloomBright.hlsl  BloomComposite.hlsl  BloomGeometry.hlsl  DeferredLighting.hlsl  GeometryPass.hlsl  ShadowDepth.hlsl  ShadowLit.hlsl  ShadowLitCsm.hlsl  Ssao.hlsl  SsaoBlur.hlsl  SsaoComposite.hlsl  Tessellation.hlsl  Triangle.hlsl
