add_library(SingularityEngine STATIC
    src/Core/Logger.h
    src/Core/Logger.cpp
    src/Core/Window.h
    src/Core/Window.cpp
    src/Core/Application.h
    src/Core/Application.cpp
    src/Core/InputSystem.h
    src/Core/InputSystem.cpp
    src/Core/Camera.h
    src/Core/Transform.h
    src/Math/SimdMath.h
    src/Math/ScalarMath.h
    src/Math/MathBenchmark.h
    src/Math/MathBenchmark.cpp
    src/Memory/MemoryCommon.h
    src/Memory/ArenaAllocator.h
    src/Memory/StackAllocator.h
    src/Memory/PoolAllocator.h
    src/Memory/FreeListAllocator.h
    src/Memory/FreeListAllocator.cpp
    src/Memory/AllocatorBenchmark.h
    src/Memory/AllocatorBenchmark.cpp
    src/Jobs/JobSystem.h
    src/Jobs/JobSystem.cpp
    src/Physics/RigidBody.h
    src/Physics/Contact.h
    src/Physics/Narrowphase.h
    src/Physics/Narrowphase.cpp
    src/Physics/ContactSolver.h
    src/Physics/ContactSolver.cpp
    src/Physics/Broadphase.h
    src/Physics/Broadphase.cpp
    src/Physics/Joint.h
    src/Physics/Joint.cpp
    src/Physics/PhysicsWorld.h
    src/Physics/PhysicsWorld.cpp
    src/Physics/PhysicsComponents.h
    src/Physics/PhysicsSystem.h
    src/Physics/PhysicsSystem.cpp
    src/Scene/Entity.h
    src/Scene/SparseSet.h
    src/Scene/World.h
    src/Scene/Components.h
    src/Scene/RenderSystem.h
    src/Scene/RenderSystem.cpp
    src/Scene/DemoScene.h
    src/Scene/SceneManager.h
    src/Scene/SceneManager.cpp
    src/Renderer/DX12/DX12Common.h
    src/Renderer/DX12/GraphicsDevice.h
    src/Renderer/DX12/GraphicsDevice.cpp
    src/Renderer/DX12/SwapChain.h
    src/Renderer/DX12/SwapChain.cpp
    src/Renderer/DX12/CommandContext.h
    src/Renderer/DX12/CommandContext.cpp
    src/Renderer/DX12/ConstantBuffer.h
    src/Renderer/DX12/ConstantBuffer.cpp
    src/Renderer/DX12/DynamicUploadBuffer.h
    src/Renderer/DX12/DynamicUploadBuffer.cpp
    src/Renderer/DX12/GpuHeap.h
    src/Renderer/DX12/GpuHeap.cpp
    src/Renderer/DX12/GBuffer.h
    src/Renderer/DX12/GBuffer.cpp
    src/Renderer/DX12/ShadowMap.h
    src/Renderer/DX12/ShadowMap.cpp
    src/Renderer/DX12/RenderTexture.h
    src/Renderer/DX12/RenderTexture.cpp
    src/Renderer/DX12/CascadedShadowMap.h
    src/Renderer/DX12/CascadedShadowMap.cpp
    src/Renderer/DX12/DepthBuffer.h
    src/Renderer/DX12/DepthBuffer.cpp
    src/Renderer/ShaderCompiler.h
    src/Renderer/ShaderCompiler.cpp
    src/Renderer/ShaderLibrary.h
    src/Renderer/ShaderLibrary.cpp
    src/Renderer/DXC/ShaderBlob.h
    src/Renderer/DXC/DxcInstance.h
    src/Renderer/DXC/DxcInstance.cpp
    src/Renderer/DX12/RootSignature.h
    src/Renderer/DX12/RootSignature.cpp
    src/Renderer/DX12/GraphicsPipeline.h
    src/Renderer/DX12/GraphicsPipeline.cpp
    src/Renderer/DX12/VertexBuffer.h
    src/Renderer/DX12/VertexBuffer.cpp
    src/Renderer/DX12/IndexBuffer.h
    src/Renderer/DX12/IndexBuffer.cpp
    src/Renderer/Mesh.h
    src/Renderer/Mesh.cpp
    src/Renderer/MeshLoader.h
    src/Renderer/MeshLoader.cpp
    src/Renderer/Renderer.h
    src/Renderer/Renderer.cpp
    src/UI/ImGuiLayer.h
    src/UI/ImGuiLayer.cpp
)

target_include_directories(SingularityEngine PUBLIC src)

target_link_libraries(SingularityEngine PUBLIC
    d3d12.lib
    dxgi.lib
    d3dcompiler.lib
    dxguid.lib
    xinput.lib
    imgui
)

target_compile_definitions(SingularityEngine PRIVATE
    $<$<CONFIG:Debug>:SGE_DEBUG>
    UNICODE
    _UNICODE
    WIN32_LEAN_AND_MEAN
    NOMINMAX
)
